color de fondo logo nuevo

--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
     <body>
         <div class="content">
             <header>
+                <img src="images/logo.png" alt="">
                 Blog de julian
                 <span>el blog mas rapido</span>
             </header>
