creacion de footer terminado

--- a/blog.html
+++ b/blog.html
@@ -17,5 +17,6 @@
                 <p>Suscribete y dale like</p>
             </div>
         </div>
+        <footer>Hecho para terminar el curso</footer>
     </body>
 </html>
